<resources>
    <string name="app_name">A-ha!</string>
    <string name="google_api_key_me">AIzaSyAU7doXHQps58jKKVV1f5iH-0_pBbDtoRk</string>
    <string name="facebook_app_id">840752006058179</string>
    <string name="fb_login_protocol_scheme">fb840752006058179</string>
    <string name="the_most_fulfilling">The most fulfilling</string>
    <string name="shopping_experience">shopping experience.</string>
    <string name="terms_and_conditions">Termeni și condiții</string>
    <string name="login">Login</string>
    <string name="sign_up">Înscrie-te</string>
    <string name="connect_with_facebook">Conectează-te cu facebook</string>
    <string name="name">Nume</string>
    <string name="surname">Prenume</string>
    <string name="email_address">Email</string>
    <string name="password">Parola</string>
    <string name="next">Inainte</string>
    <string name="already_a_member">Ai deja cont?</string>
    <string name="tap_to_login">APASĂ AICI</string>
    <string name="username_or_email">Email</string>
    <string name="forgot_password">Ai uitat parola?</string>
    <string name="new_member">Membru nou?</string>
    <string name="create_account">Creează cont</string>
    <string name="learn_more">Afla mai multe</string>
    <string name="points">puncte</string>
    <string name="select_your_favorite_mall">Selectează mall-ul favorit</string>
    <string name="megamall">MegaMall</string>
    <string name="mall_promenada">Promenada</string>
    <string name="register">Înregistrează-te</string>
    <string name="browse">aHa!</string>
    <string name="near_you">În zonă</string>
    <string name="loyalty">Puncte</string>
    <string name="loyalty_caps">PUNCTE</string>
    <string name="profile">Profil</string>
    <string name="my_profile">Profilul meu</string>
    <string name="my_profile_caps">PROFILUL  MEU</string>
    <string name="magazin">Magazine</string>
    <string name="magazin_caps">MAGAZINE</string>
    <string name="all">ALL</string>
    <string name="summer">SUMMER</string>
    <string name="coupons">CUPOANE</string>
    <string name="last_minute">LAST MINUTE</string>
    <string name="new_">NEW</string>
    <string name="promenada">Promenada</string>
    <string name="promenada_caps">PROMENADA</string>
    <string name="megamall_caps">MEGAMALL</string>
    <string name="radius">DISTANTA</string>
    <string name="category">CATEGORIE</string>
    <string name="location">LOCATIE</string>
    <string name="deal_type">OFERTE</string>
    <string name="gender">SEX</string>
    <string name="getmore_points_learn_how">Afla cum iei mai multe puncte</string>
    <string name="scan_receipt">Scanează bonul</string>
    <string name="get_rewards">Cadouri</string>
    <string name="points_caps">PUNCTE</string>
    <string name="change_reward">SCHIMBĂ CADOUL PREFERAT</string>
    <string name="you_need_320_points">YOU NEED 320 POINTS</string>
    <string name="get_points_caps">ADUNĂ PUNCTE</string>
    <string name="back">Back</string>
    <string name="walk_in">Puncte pentru vizite în magazin</string>
    <string name="visit_stores_in_order_to_get_points">Adună puncte vizitând magazinele a-Ha!</string>
    <string name="purchases">Puncte pentru cumpărături</string>
    <string name="buy_things_from_our_partners">Scanează bonurile din magazinele partenere</string>
    <string name="find_our_partners_shop">Găsește magazinele partenere</string>
    <string name="open_your_bluetooth">Pornește Bluetooth-ul</string>
    <string name="open_the_app_in_the_store">Deschide aplicația a-ha! când ești în magazin</string>
    <string name="see_stores">Găsește magazinele partenere</string>
    <string name="scan_the_receipt">Scanează bonul</string>
    <string name="make_purchase">CUMPĂRĂ</string>
    <string name="make_purchase_low_case">Cumpără</string>
    <string name="nike">NIKE</string>
    <string name="km_away">km depărtare</string>
    <string name="for_walk_ins">pentru vizite</string>
    <string name="for_walk_ins_details">pentru vizită în magazin</string>
    <string name="for_1_purchase">pentru cumpărături</string>
    <string name="stores_caps">MAGAZINE</string>
    <string name="fashion_store">Fashion store</string>
    <string name="demo_text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</string>
    <string name="rewards">CADOURI</string>
    <string name="offers">OFERTE</string>
    <string name="map">HARTA</string>
    <string name="spend">CUMPĂRĂ</string>
    <string name="dollars">RON</string>
    <string name="get_caps">PRIMEȘTE</string>
    <string name="get">Primește</string>
    <string name="points_for_walk_in">puncte pentru vizite în magazine</string>
    <string name="visit_store_to_get_points">Vizitează magazine pentru a primi puncte</string>
    <string name="see_tutorial">Vezi tutorial</string>
    <string name="get_more_points">OBȚINE PUNCTE</string>
    <string name="favorites">FAVORITE</string>
    <string name="activity">Activitate</string>
    <string name="activity_caps">ACTIVITATE</string>
    <string name="my_rewards">CADOURILE MELE</string>
    <string name="near_you_caps">IN ZONĂ</string>
    <string name="looking_for_special_offers_and_deals">Găsește produse și oferte speciale atunci când te afli în Promenada sau Mega Mall</string>
    <string name="scanning">Te anuntăm când găsim cele mai noi oferte din jurul tău!</string>
    <string name="you_are_close_to">Te afli lângă </string>
    <string name="from">DE LA</string>
    <string name="see_more_details">VEZI MAI MULTE DETALII</string>
    <string name="see_more_details_low_caps">Vezi mai multe detalii</string>
    <string name="detalii_caps">DETALII</string>
    <string name="you_received_a_reward">AI PRIMIT UN CADOU</string>
    <string name="thank_you">MULȚUMIM</string>
    <string name="show_the_code_to_the_cashier">ARATĂ CODUL LA INFODESK</string>
    <string name="settings_caps">SETĂRI</string>
    <string name="first_name_caps">PRENUME</string>
    <string name="please_type_your_first_name">Introduceți prenumele</string>
    <string name="please_type_your_last_name">Introduceți numele</string>
    <string name="please_type_your_email">Introduceți email-ul</string>
    <string name="cod_corporate">COD CORPORATE</string>
    <string name="last_name_caps">NUME</string>
    <string name="birth_date_caps">DATA NAȘTERII</string>
    <string name="email_caps">EMAIL</string>
    <string name="password_caps">PAROLĂ</string>
    <string name="change">Schimbă</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="masculin">Masculin</string>
    <string name="feminin">Feminin</string>
    <string name="save">Salvează</string>
    <string name="change_your_password">Schimbă parola</string>
    <string name="change_password">Schimbă parola</string>
    <string name="new_password">PAROLĂ NOUĂ</string>
    <string name="old_password">PAROLĂ VECHE</string>
    <string name="log_out">Deloghează-te</string>
    <string name="label_share">Distribuie</string>
    <string name="get_directions">Primește direcții</string>
    <string name="no_offers">Nu există oferte.</string>
    <string name="poll_pictures_question">Ce stil te reprezinta?</string>
    <string name="poll_submit">RĂSPUNDE</string>
    <string name="onboard_first_1">Descoperă oferte și noutăți</string>
    <string name="onboard_second_1">Fii în trend și economisește</string>
    <string name="onboard_first_2">Primește puncte vizitând magazine</string>
    <string name="onboard_second_2">E simplu. E magie</string>
    <string name="onboard_first_2_1">Mergi spre magazin</string>
    <string name="onboard_second_2_1">Iar chiar înainte de a intra</string>
    <string name="onboard_first_2_2">Deschide aplicația</string>
    <string name="onboard_second_2_2">Vei primi o notificare</string>
    <string name="onboard_first_2_3">Alege acum cadoul preferat</string>
    <string name="onboard_second_2_3">Te poți răzgândi mai târziu</string>
    <string name="onboard_first_3">Pornește Bluetooth-ul</string>
    <string name="onboard_second_3">Primește puncte și informații din jurul tău</string>
    <string name="onboard_first_3_1">Primește puncte când cumperi</string>
    <string name="onboard_second_3_1">Scanează bonul de casă</string>
    <string name="onboard_first_4">Schimbă punctele pe cadouri</string>
    <string name="onboard_second_4">Strânge puncte și primește cadoul preferat</string>
    <string name="onboard_first_5">Alege acum cadoul preferat</string>
    <string name="onboard_second_5">Te poți răzgândi mai târziu</string>
    <string name="main_pager_text_1">Cea mai tare experiență de shopping</string>
    <string name="main_pager_text_2">Profită de cele mai tari oferte</string>
    <string name="main_pager_text_3">Acumulează puncte și schimbă-le pe cadouri</string>
    <string name="filtreaz_oferta">FILTREAZĂ OFERTA</string>
    <string name="ob_ine_mai_multe_puncte">OBȚINE MAI MULTE PUNCTE</string>
    <string name="prime_te_cadouri_n_schimbul_punctelor">Primește cadouri în schimbul punctelor</string>
    <string name="u_or_i_fun">Ușor și fun</string>
    <string name="prime_te_puncte_pentru_cump_r_turi">Primește puncte pentru cumpărături</string>
    <string name="cump_r_i_prime_te_puncte">Cumpără și primește puncte</string>
    <string name="prime_te_puncte_pe_vizite_n_magazin">Primește puncte pe vizite în magazin</string>
    <string name="viziteazp_i_prime_te_puncte">Vizitează și primește puncte</string>
    <string name="porne_te_bluetooth_ul">Pornește Bluetooth-ul</string>
    <string name="prime_te_puncte_i_informa_ii_din_jurul_t_u">Primește puncte și informații din jurul tău</string>
    <string name="caut">Caută</string>
    <string name="schimb_poza">Schimbă poza</string>
    <string name="telefon">Telefon</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ai_cont_pe_siteurile_promenada_sau_mega_mall_te_poti_loga_direct">Dacă ai cont pe site-urile Promenada sau Mega Mall, te poți loga direct folosind aceleași date!</string>
    <string name="regulament">Regulament</string>
    <string name="ob_ine_puncte">Obține puncte</string>
    <string name="puncte">PUNCTE</string>
    <string name="scaneaz">Scanează</string>
    <string name="adauga">ADAUGĂ</string>
    <string name="ok">OK</string>
    <string name="politic_de_confiden_ialitate">Politică de confidențialitate</string>
    <string name="politic_de_confiden_ialitate_u"><u>Politica de confidențialitate</u></string>
    <string name="delete_account_message">În eventualitatea în care îți dorești să ștergi contul din baza noastră de date, te rugăm să trimiți un mail cu această cerere la mail@promenada.ro sau info@megamallbucuresti.ro</string>
    <string name="beneficii">Beneficii</string>
    <string name="cod_promo_op_ional">Cod promo (opțional)</string>
    <string name="am_peste_18_ani">Am peste 18 ani</string>
    <string name="puncte_pentru_site">Puncte pentru site</string>
    <string name="prime_te_puncte_acces_nd_site_ul">Primește puncte accesând site-ul</string>
    <string name="nchide">Închide</string>
</resources>