<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="6dp">

    <aroundwise.nepi.util.views.SAutoBgButton

        android:id="@+id/btn_close_dialog"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:background="@drawable/icon_dialog_close_button"
        android:padding="4dp" />

    <LinearLayout
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_close_dialog"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            fontPath="fonts/ProximaNova-Light.otf"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:gravity="center"
            android:text="@string/change_your_password"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_toLeftOf="@+id/btn_ch_passowrd"
            android:orientation="vertical">

            <TextView
                style="@style/label_profile_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/old_password" />

            <EditText
                android:id="@+id/tv_password"
                style="@style/label_value_profile_settings"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@android:color/transparent"
                android:inputType="textPassword" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_toLeftOf="@+id/btn_ch_passowrd"
            android:orientation="vertical">

            <TextView
                style="@style/label_profile_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_password" />

            <EditText
                android:id="@+id/tv_confirm"
                style="@style/label_value_profile_settings"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@android:color/transparent"
                android:inputType="textPassword" />

        </LinearLayout>

        <aroundwise.nepi.util.views.SAutoBgButton
            android:id="@+id/btn_ch_passowrd"
            android:layout_width="220dp"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_pink_rounded_button"
            android:text="@string/change_password"
            android:textColor="@color/white"
            android:layout_marginBottom="12dp"/>

    </LinearLayout>

</RelativeLayout>