<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="aroundwise.nepi.activities.discoverActivity.fragments.loyaltyFragment.getPointsFragment.GetPointsFragment">


    <aroundwise.nepi.util.views.CustomActionBar
        android:id="@+id/actionbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@android:color/white"
        android:elevation="5dp"
        app:actionbarTitle="@string/get_points_caps"
        app:hasBackButton="true"
        app:hasSearch="false"
        app:hasSpinner="false" />

    <ImageView
        android:id="@+id/iv_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/actionbar"
        android:src="@drawable/icon_loyalty_image_top"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/ivIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/actionbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:src="@drawable/icon_loyalty_get_points"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvFirst"
        fontPath="fonts/ProximaNova-Light.otf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivIcon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/prime_te_cadouri_n_schimbul_punctelor"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvsecond"
        fontPath="fonts/ProximaNova-Light.otf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvFirst"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:text="@string/u_or_i_fun"
        android:textColor="#9f9f9f"
        android:textSize="10sp"
        android:visibility="gone" />

    <aroundwise.nepi.util.views.SAutoBgButton
        android:id="@+id/btn_walk_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/rl_walk_in"
        android:layout_alignLeft="@+id/rl_walk_in"
        android:layout_alignRight="@+id/rl_walk_in"
        android:layout_alignTop="@+id/rl_walk_in"
        android:background="@drawable/button_transparent_layout" />

    <RelativeLayout
        android:id="@+id/rl_walk_in"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@+id/rl_purchase"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <ImageView
            android:id="@+id/iv_walk_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_loyalty_walk_in" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:layout_toRightOf="@+id/iv_walk_in"
            android:orientation="vertical">

            <TextView
                fontPath="fonts/ProximaNova-Light.otf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/walk_in"
                android:textSize="16sp" />

            <TextView
                fontPath="fonts/ProximaNova-Light.otf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/visit_stores_in_order_to_get_points"
                android:textColor="@color/text_get_points"
                android:textSize="12sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_loyalty_right_arrow" />


    </RelativeLayout>

    <aroundwise.nepi.util.views.SAutoBgButton
        android:id="@+id/btn_purchase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/rl_purchase"
        android:layout_alignLeft="@+id/rl_purchase"
        android:layout_alignRight="@+id/rl_purchase"
        android:layout_alignTop="@+id/rl_purchase"
        android:background="@drawable/button_transparent_layout" />

    <RelativeLayout
        android:id="@+id/rl_purchase"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@+id/iv_top"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <ImageView
            android:id="@+id/iv_purchase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_loyalty_purchase" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:layout_toRightOf="@+id/iv_purchase"
            android:orientation="vertical">

            <TextView
                fontPath="fonts/ProximaNova-Light.otf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/purchases"
                android:textSize="16sp" />

            <TextView
                fontPath="fonts/ProximaNova-Light.otf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/buy_things_from_our_partners"
                android:textColor="@color/text_get_points"
                android:textSize="12sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_loyalty_right_arrow" />


    </RelativeLayout>

    <aroundwise.nepi.util.views.SAutoBgButton
        android:id="@+id/btn_site"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/rl_site"
        android:layout_alignLeft="@+id/rl_site"
        android:layout_alignRight="@+id/rl_site"
        android:layout_alignTop="@+id/rl_site"
        android:background="@drawable/button_transparent_layout" />

    <RelativeLayout
        android:id="@+id/rl_site"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@+id/rl_walk_in"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <ImageView
            android:id="@+id/iv_website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_website" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:layout_toRightOf="@+id/iv_website"
            android:orientation="vertical">

            <TextView
                fontPath="fonts/ProximaNova-Light.otf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/puncte_pentru_site"
                android:textSize="16sp" />

            <TextView
                fontPath="fonts/ProximaNova-Light.otf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/prime_te_puncte_acces_nd_site_ul"
                android:textColor="@color/text_get_points"
                android:textSize="12sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_loyalty_right_arrow" />


    </RelativeLayout>

</RelativeLayout>
